[project]
name = "accsaber-criteria-script"
version = "0.1.0"
description = "AccSaber ranking criteria checker for Beat Saber maps"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs"]
